--- a/archives.html
+++ b/archives.html
@@ -18,6 +18,8 @@
 <h1>Archives for My Site</h1>
 
 <dl>
+    <dt>Wed 05 February 2020</dt>
+    <dd><a href="https://Dan767.github.io/cool-second-article.html">Cool Second Article</a></dd>
     <dt>Tue 04 February 2020</dt>
     <dd><a href="https://Dan767.github.io/my-first-article.html">My First Article</a></dd>
 </dl>
